Fixed formatting in data package